# rosy

./: Cargo.toml  Readme.md  flake.nix
.cargo/: config.toml
src/: allocation.rs  allocator.rs  gdt.rs  interrupt.rs  keyboard.rs  lib.rs  main.rs  memory.rs  port.rs  screen_printing.rs  serial.rs  shell.rs  utils.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs  mod.rs
src/async_runtime/: mod.rs
src/interrupt/: idt.rs  mod.rs
src/keyboard/: mod.rs
src/keyboard/layouts/: colemak_dhm.rs
src/pic8258/: mod.rs
src/ps2_keyboard_decoder/: mod.rs
src/ps2_keyboard_decoder/layouts/: colemak_dhm.rs  mod.rs
src/vga/: mod.rs
src/x86_64/: addr.rs  address.rs  descriptor.rs  gdt.rs  idt.rs  instructions.rs  interrupts.rs  mod.rs  paging.rs  port.rs  privilege_level.rs  rflags.rs  segmentation.rs  tss.rs
tests/: async_tasks.rs  basic_boot.rs  heap_allocation.rs  paging.rs  should_panic.rs  stack_overflow.rs
