[package]
name = "rosy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = { version = "0.2.6"}
lazy_static = { version = "1.0", features = [ "spin_no_std" ] }
spin = { version = "0.5.2" }
uart_16550 = { version = "0.2.0" }
bit_field = { version = "0.10.1" }
bitflags = { version = "1.3.2" }
pc-keyboard = "0.5.1"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
